src/cli/ui/snapshots/idm__cli__ui__device_view__tests__device_all_fields.snap
---
source: src/cli/ui/device_view.rs
assertion_line: 56
expression: "DeviceView::new(&dev, painter).to_string()"
---
╭───────────┬───────────╮
│ field     │ value     │
├───────────┼───────────┤
│ adapter   │ hci0      │
│ device_id │ AA:BB:CC  │
│ name      │ IDM-Clock │
│ rssi      │ -43       │
╰───────────┴───────────╯
