src/cli/ui/snapshots/idm__cli__ui__device_view__tests__device_missing_rssi.snap
---
source: src/cli/ui/device_view.rs
expression: "DeviceView::new(&dev, &painter).to_string()"
---
╭───────────┬───────────╮
│ field     │ value     │
├───────────┼───────────┤
│ Adapter   │ hci0      │
│ Device ID │ AA:BB:CC  │
│ Name      │ IDM-Clock │
│ RSSI      │ -         │
╰───────────┴───────────╯
